Remove margin from ul to fix spacing

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -44,6 +44,7 @@ input {
 
 ul {
   padding: 0;
+  margin: 0;
   display: flex;
   list-style-type: none;
   gap: 15px;
